# ReDAL

./: README.md  base_agent.py  inference.py  train_active.py  train_region_active.py  train_supervision.py
active_selection/: ReDAL.py  ReDAL_S3DIS.config  ReDAL_SemanticKITTI.config  __init__.py  core_set.py  diversity.py  mc_dropout.py  random_selection.py  segment_entropy.py  softmax_uncertainty.py  utils.py
data_preparation/: README.md  gen_color_gradient.py  gen_surface_variation.py  s3dis_data_preparation.py
data_preparation/region_division/: .gitmodules  README.md  gen_json.py  gen_json_subcloud.py  inspect_supervoxel.py  json_conversion.py  region_label_data.json  region_label_data_2.json  region_ulabel_data.json  region_ulabel_data_2.json
data_preparation/region_division/src/: CMakeLists.txt  README.md  dataset.h  install.sh  main.cpp  s3dis.cpp  scannet.cpp  semkitti.cpp
dataloader/: __init__.py
dataloader/s3dis/: active_dataset.py  dataset.py  region_active_dataset.py  region_crop_dataset.py  region_dataset.py  transforms.py
dataloader/scannet/: active_dataset.py  dataset.py  region_active_dataset.py  region_dataset.py
models/: __init__.py  utils.py
models/s3dis/: minkunet.py
modules/: layers.py  layers.py~
utils/: analysis.py  analysis_boundary_error.py  analysis_boundary_selection.py  analysis_error_selection.py  analysis_region_selection.py  common.py  count_s3dis_pts.py  gen_kdtree.py  gen_oracle_data.py  miou.py  region_diversity_pilot.py  s3dis_saver.py  save_experimental_result.py  saver.py  semkitti_saver.py  visualize_init.py
(+49 files in other folders)
